--- a/AIFoodApp/app/src/main/res/login/layout/activity_login.xml
+++ b/AIFoodApp/app/src/main/res/login/layout/activity_login.xml
@@ -7,6 +7,7 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <!--
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
@@ -17,6 +18,13 @@
         android:textSize="40sp"
         tools:layout_marginBottom="30dp"
         tools:layout_marginTop="30dp" />
+-->
+    <ImageView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="99dp"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/plan_meal" />
 
     <LinearLayout
         android:layout_width="wrap_content"
