--- a/AIFoodApp/app/src/main/res/main/layout/activity_food_analysis.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/activity_food_analysis.xml
@@ -30,6 +30,20 @@
             android:gravity="right"
             android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/tv_meal_position"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:text="식사 위치"
+                android:textSize="23sp" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
             <Button
                 android:id="@+id/btn_insert_dailymeal"
                 android:layout_width="wrap_content"
