--- a/AIFoodApp/app/src/main/res/login/layout/activity_usersetting.xml
+++ b/AIFoodApp/app/src/main/res/login/layout/activity_usersetting.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/round_rect_button"
+                android:background="@android:drawable/alert_dark_frame"
                 android:backgroundTint="#3A531C"
                 android:text="회원탈퇴"
                 android:textColor="#FFFFFF" />
